# robust-line-based-estimator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  requirements.txt  setup.py
robust_line_based_estimator/: CMakeLists.txt  evaluation.py  hybrid_relative_pose.py  line_junction_test_phototourism.ipynb  line_junction_test_scannet.ipynb  line_junction_test_scannet_depth.ipynb  line_junction_utils.py  line_matcher.py  point_based_relative_pose.py  visualization.py  vp_matcher.py
robust_line_based_estimator/base/: CMakeLists.txt  junction.h  pose.cpp  pose.h  types.h
robust_line_based_estimator/datasets/: amsterdam_house.py  eth3d.py  kitti.py  lamar.py  phototourism.py  scannet.py  seven_scenes.py
robust_line_based_estimator/estimators/: CMakeLists.txt  bindings.cc  functions.cpp  functions.h  hybrid_relative_pose_estimator.cpp  hybrid_relative_pose_estimator.h  hybrid_relative_pose_estimator_base.cpp  hybrid_relative_pose_estimator_base.h  line_relative_pose_hybrid_ransac.h  line_relative_pose_ransac.h  relative_pose_solver_1line_1vp_2pt_orthogonal.cpp  relative_pose_solver_1line_1vp_2pt_orthogonal.h  relative_pose_solver_1vp_2line_1pt_orthogonal.cpp  relative_pose_solver_1vp_2line_1pt_orthogonal.h  relative_pose_solver_1vp_2pt_orthogonal.cpp  relative_pose_solver_1vp_2pt_orthogonal.h  relative_pose_solver_1vp_3cll.cpp  relative_pose_solver_1vp_3cll.h  relative_pose_solver_1vp_3cll_orthogonal.cpp  relative_pose_solver_1vp_3cll_orthogonal.h  relative_pose_solver_1vp_3pt.cpp  relative_pose_solver_1vp_3pt.h  relative_pose_solver_2vp_2pt.cpp  (+12 more)
(+89 files in other folders)
